# Get-Alive

./: .gitignore  Cargo.toml  README.md  launch.cmd  launch.sh
application/: Cargo.toml
application/src/: application.rs  basic.rs  lib.rs  old.rs
application/src/basic/: basic_application.rs  basic_handler.rs  old.rs
entity-manager/: Cargo.toml
entity-manager/src/: basic_entity_builder.rs  basic_entity_manager.rs  entity_builder.rs  lib.rs
input-manager/: Cargo.toml
input-manager/src/: basic.rs  input_manager.rs  lib.rs
input-manager/src/basic/: basic_input_manager.rs
renderer-manager/: Cargo.toml
renderer-manager/src/: basic.rs  graphics.rs  lib.rs  renderer_manager.rs
renderer-manager/src/basic/: basic_graphics.rs  basic_renderer.rs
src/: app.rs  application.rs  constants.rs  event.rs  game.rs  input.rs  main.rs  model.rs
src/app/: input.rs  main.rs  render.rs  system.rs
src/app/input/: basic_impl.rs  events.rs  input_key.rs  key_type.rs  system.rs
src/app/main/: basic_impl.rs  events.rs  handle.rs  system.rs
src/app/render/: events.rs  handle.rs  render.rs
src/application/: application_handler.rs  entity.rs  handler.rs  input.rs  renderer.rs  runtime.rs
src/application/entity/: basic_entity_builder.rs  basic_entity_manager.rs  entity_manager.rs
src/constants/: app.rs  application.rs  input_actions.rs  inputs.rs
src/event/: basic_impl.rs  dispatcher.rs  event_loop.rs  generic_dispatcher.rs
src/input/: basic_impl.rs  ierrors.rs  input_system.rs  isystem.rs  itype.rs
src/model/: transform.rs  vec2.rs
src/model/entity/: player.rs
(+11 files in other folders)
