[package]
name = "get-alive"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "application",
    "entity-manager",
    "input-manager",
    "renderer-manager"
]

[dependencies]
application = { path = "./application" }
entity-manager = { path = "./entity-manager" }
input-manager = { path = "./input-manager" }
winit = "0.30.9"
